Gallery and other things

--- a/index.html
+++ b/index.html
@@ -183,13 +183,30 @@
         </div>
         <div class="row">
             <div class="col-lg-10 center-block">
-                <p>Welcome, RSVP, sign the book, live a life</p>
+                <div class="row" style="margin:10px;">
+                    <div class="row">
+                        <div class="col-lg-1"><label>Name</label></div>
+                        <div class="col-lg-1"><input type="text" placeholder="Enter full name" /></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-1"><label>Attending</label></div>
+                        <div class="col-lg-1"><select><option value="Yes">Yes</option><option>No</option></select></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-2">
+                            <input type="submit" value="Send" />
+                        </div>
+                    </div>
+                    </div>
             </div>
         </div>
         <a name="photos" id="photos"></a>
         <div class="row">
             <div class="col-lg-10 center-block">
-                <p>Photos! :)</p>
+                <embed type="application/x-shockwave-flash" 
+                       src="https://photos.gstatic.com/media/slideshow.swf" 
+                       width="800" height="400" flashvars="host=picasaweb.google.com&hl=en_US&feat=flashalbum&RGB=0x000000&feed=https%3A%2F%2Fpicasaweb.google.com%2Fdata%2Ffeed%2Fapi%2Fuser%2F109002633061581061018%2Falbumid%2F6019048577529168465%3Falt%3Drss%26kind%3Dphoto%26hl%3Den_US" 
+                       pluginspage="http://www.macromedia.com/go/getflashplayer"></embed>
             </div>
 
         </div>
