--- a/index.html
+++ b/index.html
@@ -68,6 +68,12 @@
                 <h3>TRUE LOVE</h3>
                 <h6>AMANDA &amp; IRWIN</h6>
                 <div class="text-justify">
+                    <span class="alert">Amanda:</span> Aye, I don't want no regular engagement eh. No plain old plainness...
+                </div>
+                <div class="text-justify">
+                    <span class="alert">Irwin:</span> CHALLENGE... ACCEPTED!
+                </div>
+                <div class="text-justify">
                     On Christmas morning, we drove down to the Savannah to have breakfast of sandwiches, cheesecake  & wine.  It was really nice.  After, we exchanged gifts, I gave her an iPhone. She was super surprised. Then, I broke out a simple SPA (single page app) and in it, I asked her to do me the honour of journeying through life together.  After she got over that, I rollerbladed around a little bit (I only had two months of learning, so that’s all I could do) and then skated up to her, and on one knee asked her to marry me
                 </div>
 
@@ -110,13 +116,13 @@
                 <h4>Afia Boney</h4>
             </div>
             <div class="col-lg-1 maid">
+                <h4>Ria Winchester-Charles</h4>
+            </div>
+            <div class="col-lg-1 maid">
                 <h4>Danielle McDougal</h4>
             </div>
             <div class="col-lg-1 maid">
                 <h4>Kerry Gilbert</h4>
-            </div>
-            <div class="col-lg-1 maid">
-                <h4>Alena Martina</h4>
             </div>
             <div class="col-lg-1 maid">
                 <h4>Sjovkist Stewart</h4>
@@ -165,12 +171,12 @@
                         <p>
                             You may leave a gift with us by Direct Deposit or Wire Transfer to our <strong>First Citizens Bank</strong> account at:
 
-                            Direct Deposit: Ac#<br />
+                            Direct Deposit: Ac#2203198<br />
                             OR<br />
                             Wire Transfer Details:<br />
                             SWIFT Code FCTTTTPS<br />
-                            Beneficiaries: Irwin Williams OR Amanda Boney<br />
-                            Account No:
+                            Beneficiaries: Amanda Boney OR Irwin Williams<br />
+                            Account No:2203198
                         </p>
                     </div>
                 </div>
@@ -181,39 +187,61 @@
         <div class="row">
             <div class="col-lg-10 center-block rsvp">
                 <h3 class="text-center h3">RSVP</h3>
-                <script type="text/javascript">var submitted = false;</script>
+                <script type="text/javascript">
+                    var submitted = false;
+                    function showCommentLink() {
+                        submitted = true;
+                        $("#rsvpForm").hide(300);
+                        $("#leaveAComment").show(600);
+
+
+                        return true;
+                    }
+                </script>
                 <iframe name="hidden_iframe" id="hidden_iframe"
-                        style="display:none;" onload='if(submitted){window.alert(" Success! Your response has been received");}'></iframe>
+                        style="display:none;"></iframe>
                 <div dir="ltr" class="well-sm text-center">
                     <p>Will you be joining us? Please let us know by filling out the form below</p>
                     </div>
-                    <form action="https://docs.google.com/forms/d/1ZDH50tLwpP8z3lv8DmYQSEV68-hlfQDs0bfphC8hCnY/formResponse"
-                          method="POST" target="_self" onsubmit="submitted=true;" target="hidden_iframe">
-                        <div class="ss-form-question" role="listitem">
-                            <div dir="ltr" class="well">
-                                <div class="ss-form-entry">
-                                    <div class="label label-default">
-                                        Name
-                                    </div>
+                <form action="https://docs.google.com/forms/d/1ZDH50tLwpP8z3lv8DmYQSEV68-hlfQDs0bfphC8hCnY/formResponse"
+                      method="POST" target="hidden_iframe"
+                      id="rsvpForm"
+                      onsubmit="showCommentLink();" target="hidden_iframe">
+                    <div class="ss-form-question" role="listitem">
+                        <div dir="ltr" class="well">
+                            <div class="ss-form-entry">
+                                <div class="label label-default">
+                                    Name
+                                </div>
 
-                                    <input type="text" name="entry.1377172335" value="" class="form-control" id="entry_1377172335" dir="auto" aria-label="Name  " title="">
-                                </div>
+                                <input type="text" name="entry.1377172335" value="" class="form-control" id="entry_1377172335" dir="auto" aria-label="Name  " title="">
                             </div>
                         </div>
-                        <div class="ss-form-question errorbox-good" role="listitem">
-                            <div dir="ltr" class="ss-item  ss-text">
-                                <div class="well">
-                                    <div class="label label-info">
-                                        Attending
-                                    </div>
-                                    <input type="text" name="entry.1035916731" value="" class="form-control" id="entry_1035916731" dir="auto" aria-label="Attending  " title="">
+                    </div>
+                    <div class="ss-form-question errorbox-good" role="listitem">
+                        <div dir="ltr" class="ss-item  ss-text">
+                            <div class="well">
+                                <div class="label label-info">
+                                    Attending
                                 </div>
+                                <select name="entry.1035916731" class="form-control">
+                                    <option value="Yes">Surely, I am.</option>
+                                    <option value="no">no</option>
+                                </select>
+
                             </div>
                         </div>
-                        <input type="hidden" name="pageHistory" value="0">
-                        <input type="hidden" name="fbzx" value="-2931104418150563749">
-                        <input type="submit" name="submit" class="btn-embossed" value="Submit" id="ss-submit" />
-                    </form>
+                    </div>
+                    <input type="hidden" name="pageHistory" value="0">
+                    <input type="hidden" name="fbzx" value="-2931104418150563749">
+                    <input type="submit"
+                           name="submit"
+                           class="btn-embossed" value="Submit"
+                           id="ss-submit" />
+                </form>
+                <div id="leaveAComment" style="display:none;">
+                    <label class="alert-success">Thanks! </label><a href="#feedback" class="btn-embossed">Any thoughts you'd like to share?</a>
+                </div>
                 </div>
         </div>
         <a name="photos" id="photos"></a>
@@ -224,10 +252,30 @@
 
         </div>        
     <div class="row">
+        <a name="feedback" id="feedback"></a>
         <div class="col-lg-10 center-block">
-            <iframe class="center-block text-center"
+            <div id="disqus_thread"></div>
+            <script type="text/javascript">
+                /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+                var disqus_shortname = 'amandaandirwinsmarvellousmarriage'; // required: replace example with your forum shortname
+
+                /* * * DON'T EDIT BELOW THIS LINE * * */
+                (function () {
+                    var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+                    dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+                    (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+                })();
+            </script>
+            <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+            <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-10 center-block">
+            <!--<iframe class="center-block text-center"
                     src="http://8tracks.com/mixes/4192630/player_v3/autoplay"
-                    width="300" height="250" style="border: 0px none;"></iframe>
+                    width="300" height="250" style="border: 0px none;"></iframe>-->
             <!--<p class="_8t_embed_p" style="font-size: 11px; line-height: 12px;"><a href="">Love &amp; Marriage</a> from <a href="">anon-508050895</a> on <a href="http://8tracks.com">8tracks Radio</a>.</p>-->
         </div>
     </div>
