--- a/index.html
+++ b/index.html
@@ -273,10 +273,10 @@
     </div>
     <div class="row">
         <div class="col-lg-10 center-block">
-            <!--<iframe class="center-block text-center"
+            <iframe class="center-block text-center"
                     src="http://8tracks.com/mixes/4192630/player_v3/autoplay"
                     width="300" height="250" style="border: 0px none;"></iframe>-->
-            <!--<p class="_8t_embed_p" style="font-size: 11px; line-height: 12px;"><a href="">Love &amp; Marriage</a> from <a href="">anon-508050895</a> on <a href="http://8tracks.com">8tracks Radio</a>.</p>-->
+            <!--<p class="_8t_embed_p" style="font-size: 11px; line-height: 12px;"><a href="">Love &amp; Marriage</a> from <a href="">anon-508050895</a> on <a href="http://8tracks.com">8tracks Radio</a>.</p>
         </div>
     </div>
     
