--- a/index.html
+++ b/index.html
@@ -50,15 +50,19 @@
             <div class="col-lg-6 text-right">
                 <h3>The Bride</h3>
                 <h6>Amanda Shawna Boney</h6>
-                <p>Amanda Boney is considered to be an inspirational, visionary and pioneering artist/designer. #Creative #Resourceful. She chose the path of costume designing for her love of dance, theatre, film and art. At the London College of Fashion she explored a host of  techniques and have developed a wide body of skills for designing for performance. Working at the National Theatre, The Old Vic and the Academy Costumes Limited has exposed her to the task involved in wardrobe management. Fabric hunting, texture mixing and color exploration piques her interest at every new opportunity.  Sports also fascinates her and when not doing rollerblading, horse back riding, or swimming she remembers ice skating in a synchronized team. She hopes that her engagement with various performance and art projects would enable her to explore more substantial ideas and provoke thought in the field of designing, technology and art.</p>
+                <p>Irwin and I have been friends for long time. We would have seen each other in various “limes” post teen years. Good times! I remembered Irwin one way…. 10 years later after going to the UK to study, work and enjoy another culture, I came back to a new perspective on Mr. Irwin. He would always be the one to give us a lift home and look out for us, because we live in the same area. These conversations were rich and had depth in various areas. I really enjoyed it and his outlook and responses. He was a very good friend to the family. One day when he was dropping me home he said he wanted to ask me a question… I thought to myself, here it comes… He asked whether I felt we could be more than friends, I was stunned and basically said no.. He was not phased. It felt like he responded in context and after long conversations about how we felt about each other and what we wanted. These locations in Trinidad included: UWI, Hyatt, the Queens Park Savannah and the car of course. Roses and cheese cake had to stop because I wouldn't be able to make an objective decision :)... We talked, went out for Sushi and went Hong Kong Graffiti (one of my favourite restaurants), and other places within the space of one month. At the end of one process begins another, we agreed to become “more than friends” and get to know each other in a more significant way (setting: the boardwalk). We enjoyed one year of sharing experiences together with talks, talks and laughter. Irwin is very thoughtful and every conversation is invested with time and sincere attention to truth. The miles don’t seem long enough for him to care or show generosity and consideration. Its been a journey of learning and discovery since and the months just seem to provide more understanding of God’s design for our lives.</p>
             </div>
             <div class="col-lg-6 text-left">
                 <h3>The Groom</h3>
                 <h6>Irwin Starr Williams</h6>
                 <p>
-                    I have known Irwin Williams for nineteen years and we have collaborated on a number of projects related to community building initiatives, business process improvements and support, as well as business technology implementation.
-                    Irwin is innovative, diligent and a pursuer of wisdom. Often, we would discuss an issue, and I would receive a proposed solution within a reasonable time; usually surpassing my expectations.
-                    He is not just one to talk about an idea, but he gets things done. Irwin is a dedicated planner, and pursuer of his personal and professional goals. I have known Irwin to spend late nights and to go the distance in pursuit of the goals he has set up. In our projects, he has always been willing to communicate where he was and what he would need to arrive at our agreed goal. In this respect, Irwin is a team player who is hardworking and committed to professional and personal development.
+                    That night in the car, I felt it made sense, this was a good time to ask. I made up a simple analogy about feelings and just used it as a doorway to open the conversation with Mandy about how she felt about me.
+                    It started a conversation that lasted a month long. We spoke about how we saw each other, what we longed for and how we could help each other get to where we were going to go. We gave ourselves a month to decide, and it concluded with a week of “radio silence”.
+                    After four days, we knew, we should dive in, explore and see where it led.
+                    And now, here we are.
+                    Amanda is a force of nature. She’s always building something, coming up with a new idea, trying out new things. I am a nature lover. This is why I love her.
+                    No really, all those things really set up both of us for a great adventure.  I like that Amanda doesn’t take no for an answer (me neither), we have to explore, we have to understand, we have to have long talks in the Botanical Gardens on a random Wednesday morning over breakfast. And I appreciate that because it shows how much we value understanding and becoming.
+                    I’m looking forward to all the places God has set out for us as we journey through life.
                 </p>
             </div>
         </div> <!-- /row -->
@@ -68,17 +72,21 @@
                 <h3>TRUE LOVE</h3>
                 <h6>AMANDA &amp; IRWIN</h6>
                 <div class="text-justify">
-                    <span class="alert">Amanda:</span> Aye, I don't want no regular engagement eh. No plain old plainness...
+                    Many months before…
                 </div>
                 <div class="text-justify">
-                    <span class="alert">Irwin:</span> CHALLENGE... ACCEPTED!
+                    Amanda: Aye, I don't want no regular engagement eh. No plain old plainness...<br />
+                    Irwin: CHALLENGE... ACCEPTED!
                 </div>
                 <div class="text-justify">
-                    On Christmas morning, we drove down to the Savannah to have breakfast of sandwiches, cheesecake  & wine.  It was really nice.  After, we exchanged gifts, I gave her an iPhone. She was super surprised. Then, I broke out a simple SPA (single page app) and in it, I asked her to do me the honour of journeying through life together.  After she got over that, I rollerbladed around a little bit (I only had two months of learning, so that’s all I could do) and then skated up to her, and on one knee asked her to marry me
+                        Would you believe, Irwin was talking to Amanda on Christmas Eve’s eve about Christmas presents? During that conversation, they got to talking about how much of a part of someone a mobile phone can be - almost like a second appendage.  Amanda ended up realizing how much she needed to get a new iPhone (misplacing hers a few months prior).
+                        On Christmas morning, Irwin rolled up to Amanda’s like he’d done the year before - they like to be all fancied up when exchanging gifts. Irwin was in short pants and a regular jersey - that is, not fancied up.
+                        He wanted to exchange gifts somewhere outdoorsy, with nature and such. To make this happen, Richard lent Irwin his car and they drove down to the Savannah.
+                        Beginning with the small surprise, Irwin brought out breakfast - sandwiches, cheesecake & wine. Amanda was heard to remark, “this is really nice :)”.  She gave me my gift and Irwin had her close her eyes, wrapped in felt was a new iPhone5.  Amanda was super surprised, the tears were just a side road to a grateful expression.
+                        They went outside the car, and Irwin’s short pants made sense, for he was now standing in roller blades.
+                        With an app he wrote for the occasion and few turns on the rollerblades, Irwin, on one knee asked Amanda to be his bethrothed.
+                        She said yes.
                 </div>
-
-                <p></p>
-            </div>
             <div class="col-lg-5 text-left">
 
                 <p></p>
@@ -193,8 +201,6 @@
                         submitted = true;
                         $("#rsvpForm").hide(300);
                         $("#leaveAComment").show(600);
-
-
                         return true;
                     }
                 </script>
@@ -240,7 +246,8 @@
                            id="ss-submit" />
                 </form>
                 <div id="leaveAComment" style="display:none;">
-                    <label class="alert-success">Thanks! </label><a href="#feedback" class="btn-embossed">Any thoughts you'd like to share?</a>
+                    <label class="alert-success">Thanks! </label>
+                    <a href="#feedback" class="btn-embossed">Any thoughts you'd like to share?</a>
                 </div>
                 </div>
         </div>
