bridal party images

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </div>
             </div>
         </div>
-        <div class="row first"></div>
+        <div class="row first cover"></div>
         <div class="row">
             <a name="mandi" id="mandi"></a>
             <div class="col-lg-6 text-right">
@@ -66,7 +66,7 @@
                 </p>
             </div>
         </div> <!-- /row -->
-        <div class="row second"></div>
+        <div class="row second cover"></div>
         <div class="row">
             <div class="col-lg-10 center-block text-center">
                 <h3>TRUE LOVE</h3>
@@ -92,7 +92,7 @@
                 <p></p>
             </div>
         </div>
-        <div class="row third"></div>
+        <div class="row third cover"></div>
         <div class="row" style="background-color:white;">
         <a name="wedding" id="wedding"></a>
             <iframe class="col-xs-10 center-block" style="margin-bottom:-300px;padding:0;width:100%;border:0;height:600px;"
@@ -104,7 +104,7 @@
                 <strong>August 1,  2014. <br />10:00 am, North Deck</strong>
             </div>
         </div> <!-- /row -->
-        <div class="row fourth"></div>
+        <div class="row fourth cover"></div>
         <a name="bridalparty" id="bridalparty"></a>
         <div class="row">
             <div class="col-lg-11 center-block text-center">
@@ -168,7 +168,7 @@
             </div>
             <div class="col-lg-1"></div>
         </div>
-        <div class="row fifth"></div>
+        <div class="row fifth cover"></div>
         <a name="registry" id="registry"></a>
         <div class="row registry">
             <div class="col-lg-10 text-left center-block">
@@ -190,7 +190,7 @@
                 </div>
             </div>
         </div>
-        <div class="row sixth"></div>
+        <div class="row sixth cover"></div>
         <a name="rsvp" id="rsvp"></a>
         <div class="row">
             <div class="col-lg-10 center-block rsvp">
@@ -339,6 +339,7 @@
        });
 
        $(window).trigger('hashchange');
+       $(".cover").css("height", window.height);
    });
     </script>
 </body>
