--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
             <div class="row">
                 <div class="col-lg-10 center-block">
                     <iframe class="center-block text-center"
-                            src="http://8tracks.com/mixes/4192630/universal"
+                            src="http://8tracks.com/mixes/4192630/player_v3/autoplay"
                             width="300" height="250" style="border: 0px none;"></iframe>
                     <!--<p class="_8t_embed_p" style="font-size: 11px; line-height: 12px;"><a href="">Love &amp; Marriage</a> from <a href="">anon-508050895</a> on <a href="http://8tracks.com">8tracks Radio</a>.</p>
                         </div>
@@ -297,7 +297,7 @@
                             <div class="row">
                                 <div class="col-xs-7">
 
-                                    <p>Made with &hearts; by Irwin.</p>
+                                    <p>Made with &hearts; by Irwin. Photos by Andrea, thanks! :)</p>
                                 </div> <!-- /col-xs-7 -->
 
                                 <div class="col-xs-5">
