--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <div class="weddinglocationdetails">
                     <h4>Amanda &amp; Irwin</h4>
                     <strong>August 1,  2014. <br />10:00 am, North Deck</strong>
-                    <h5>This is an outdoor event, kindly wear appropriate footwear</h5>
+                    <em>This is an outdoor event, kindly wear appropriate footwear</em>
                 </div>
             </div> <!-- /row -->
             <div class="row fourth cover"></div>
