--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
                 <div class="weddinglocationdetails">
                     <h4>Amanda &amp; Irwin</h4>
-                    <strong>August 1,  2014. <br />10:00 am, North Deck</strong>
+                    <strong>August 1,  2014. <br />10:00 am, North Deck</strong><br />
                     <em>This is an outdoor event, kindly wear appropriate footwear</em>
                 </div>
             </div> <!-- /row -->
